# stockapp

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  test_db_connection.py  test_yfinance.py
.cursor/rules/: rules.mdc
.github/workflows/: ci.yml  python-app.yml
alembic/: env.py
alembic/versions/: 6b7eede71597_initial_timescale_schema.py
config/: settings.yaml
data/: all_tickers.txt  details.txt  etoro_tickers.txt  project_plan.txt  requirements.txt
scripts/: combine_ticker_lists.py  deep_scan.sh  extract_etoro_tickers.py  fetch_alpha_vantage.py  update_nasdaq100.py  update_tickers.py
src/: config_loader.py  logger.py
src/stockapp/: __init__.py  app.py  backtest.py  cli.py  crud.py  dashboard.py  data_fetch.py  database.py  db_models.py  executor.py  indicators.py  main.py  order_executor.py  risk_manager.py  scanner.py  schemas.py  signal_engine.py  signal_generator.py
src/stockapp/strategies/: opening_range.py  volume_confirmation.py
tests/: conftest.py  test_app.py  test_backtest.py  test_config.py  test_dashboard.py  test_data_fetch.py  test_db_models.py  test_executor.py  test_indicators.py  test_signal_engine.py  utils.py
trading_bot/: app.py  backtest.py  dashboard.py  data_fetch.py  executor.py  indicators.py  schemas.py  signal_engine.py
