[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stockapp"
version = "0.1.0"
description = "A zero-leverage, end-to-end Python trading bot"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "sqlalchemy>=1.4.0",
    "pandas>=1.3.0",
    "yfinance>=0.1.70",
    "python-dotenv>=0.19.0",
    "alembic>=1.7.0",
    "pytest>=6.2.5",
    "dash>=2.0.0",
    "plotly>=5.3.0",
    "typer>=0.4.0",
    "rich>=10.12.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.5",
    "requests>=2.26.0",
    "aiohttp>=3.8.0",
    "websockets>=10.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "ta>=0.7.0",
    "pytz>=2021.3",
    "python-dateutil>=2.8.2",
    "psycopg2-binary>=2.9.1",
    "redis>=4.0.0",
    "celery>=5.1.0",
    "flower>=1.0.0",
    "prometheus-client>=0.11.0",
    "sentry-sdk>=1.0.0",
    "black>=21.9b0",
    "isort>=5.9.3",
    "flake8>=3.9.2",
    "mypy>=0.910",
    "pre-commit>=2.15.0",
    "pytest-cov>=2.12.0",
    "pytest-asyncio>=0.15.0",
    "pytest-mock>=3.6.0",
    "pytest-env>=0.8.0",
    "pytest-xdist>=2.4.0",
    "pytest-timeout>=2.1.0",
    "pytest-sugar>=0.9.4",
    "pytest-html>=3.1.1",
    "pytest-metadata>=1.11.0",
    "pytest-clarity>=1.0.1",
    "pytest-randomly>=3.8.0",
    "pytest-sugar>=0.9.4",
    "pytest-html>=3.1.1",
    "pytest-metadata>=1.11.0",
    "pytest-clarity>=1.0.1",
    "pytest-randomly>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "black>=21.9b0",
    "isort>=5.9.3",
    "flake8>=3.9.2",
    "mypy>=0.910",
    "pre-commit>=2.15.0",
    "pytest-cov>=2.12.0",
    "pytest-asyncio>=0.15.0",
    "pytest-mock>=3.6.0",
    "pytest-env>=0.8.0",
    "pytest-xdist>=2.4.0",
    "pytest-timeout>=2.1.0",
    "pytest-sugar>=0.9.4",
    "pytest-html>=3.1.1",
    "pytest-metadata>=1.11.0",
    "pytest-clarity>=1.0.1",
    "pytest-randomly>=3.8.0",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=stockapp --cov-report=term-missing --cov-report=html"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["trading_bot"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"

[tool.poetry]
name = "stockapp"
version = "0.1.0"
description = "Stock trading and analysis app"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "stockapp", from = "src" }]

[tool.poetry.scripts]
stockapp = "stockapp.cli:app" 